[package]
name = "onion-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha3 = "0.10"
sha2 = "0.10"
data-encoding = "2"
crossbeam-channel = "0.5"
num_cpus = "1"
regex = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
